# ROS2

./: .gitignore  Introduction_ROS.odt  Introduction_ROS2.md  README.md  Rapport_de_test.md
MyBots/: build.sh  frames_2024-11-26_22.41.38.gv  frames_2024-11-26_22.46.45.gv  frames_2024-11-26_22.47.17.gv
MyBots/install/: local_setup.sh  setup.sh
MyBots/install/line_bot/lib/line_bot/: line_follower_node
MyBots/install/line_bot/share/line_bot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
MyBots/install/my_bot/lib/my_bot/: lidar_node
MyBots/install/my_bot/share/my_bot/: package.sh
MyBots/log/: latest_build
MyBots/src/line_bot/: CMakeLists.txt  package.xml
MyBots/src/line_bot/launch/: robot.launch.py
MyBots/src/line_bot/src/: line_follower_node.cpp
MyBots/src/my_bot/: CMakeLists.txt
MyBots/src/my_bot/config/: slam_visualization.rviz
MyBots/src/my_bot/launch/: bridge.launch.py  robot.launch.ign  robot.launch.py
MyBots/src/my_bot/model/: robot.sdf
MyBots/src/my_bot/src/: lidar_node.cpp
TurtleBot3/install/: local_setup.sh  setup.sh
TurtleBot3/install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
TurtleBot3/install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
TurtleBot3/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
TurtleBot3/install/turtlebot3_gazebo/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
TurtleBot3/install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
TurtleBot3/install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
TurtleBot3/install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
TurtleBot3/log/: latest_build
install/: local_setup.sh  setup.sh
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.dsv  local_setup.sh  package.sh  package.xml
install/turtlebot3_fake_node/share/turtlebot3_fake_node/environment/: path.dsv
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.dsv  local_setup.zsh  package.xml
install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.bash  local_setup.sh  local_setup.zsh  package.sh
log/: latest_build
(+143 files in other folders)
