<?xml version="1.0"?>
<package format="3">
  <name>line_bot</name>
  <version>0.0.1</version>
  <description>Line following robot package</description>
  <maintainer email="JouiniMohamedChaker@proton.me">Mohamed-Chaker-Jouini</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>